--- a/DCS.Alternative.Launcher/Plugins/Game/Views/GameView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Game/Views/GameView.xaml
@@ -9,8 +9,8 @@
              xmlns:fluentWpf="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:wpf="clr-namespace:LoadingIndicators.WPF;assembly=LoadingIndicators.WPF"
              xmlns:views="clr-namespace:DCS.Alternative.Launcher.Plugins.Game.Views"
+             xmlns:wpf="clr-namespace:LoadingIndicators.WPF;assembly=LoadingIndicators.WPF"
              x:Name="RootLayout"
              HorizontalAlignment="Stretch"
              VerticalAlignment="Stretch"
@@ -180,6 +180,10 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="5" />
                     </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
                     <Menu Grid.Row="1"
                           Height="Auto"
                           MinWidth="100"
@@ -269,6 +273,22 @@
                                FontSize="11"
                                Foreground="#FFAFAFAF"
                                Text="{Binding SelectedInstall.Value.Version}" />
+                    <CheckBox Grid.Row="1"
+                              Grid.Column="1"
+                              Margin="0,-3,0,0"
+                              Padding="3,0,0,0"
+                              VerticalAlignment="Center"
+                              VerticalContentAlignment="Center"
+                              FontFamily="{StaticResource Prototype}"
+                              FontSize="11"
+                              Foreground="#FFFFFFFF"
+                              IsChecked="{Binding IsVREnabled.Value, Mode=TwoWay}">
+                        <TextBlock VerticalAlignment="Center"
+                                   FontFamily="{StaticResource Prototype}"
+                                   FontSize="11"
+                                   Foreground="#FFFFFFFF"
+                                   Text="LAUNCH IN VR" />
+                    </CheckBox>
 
                 </Grid>
             </StackPanel>
