--- a/DCS.Alternative.Launcher/Plugins/About/Views/AboutView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/About/Views/AboutView.xaml
@@ -11,9 +11,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:views="clr-namespace:DCS.Alternative.Launcher.Plugins.Game.Views"
              xmlns:views1="clr-namespace:DCS.Alternative.Launcher.Plugins.Manuals.Views"
+             xmlns:views2="clr-namespace:DCS.Alternative.Launcher.Plugins.About.Views"
              xmlns:windows="clr-namespace:DCS.Alternative.Launcher.Windows"
              xmlns:wpf="clr-namespace:LoadingIndicators.WPF;assembly=LoadingIndicators.WPF"
-             xmlns:views2="clr-namespace:DCS.Alternative.Launcher.Plugins.About.Views"
              x:Name="RootLayout"
              HorizontalAlignment="Stretch"
              VerticalAlignment="Stretch"
@@ -34,10 +34,120 @@
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="{x:Type TextBlock}">
                 <Setter Property="Foreground" Value="#FFFFFFFF" />
+                <Setter Property="FontSize" Value="16" />
+                <Setter Property="FontFamily" Value="{StaticResource Prototype}" />
             </Style>
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
-        <wpf:LoadingIndicator IsActive="{Binding IsLoading.Value}" Style="{DynamicResource LoadingIndicatorArcsStyle}" />
+
+        <Border Margin="30"
+                BorderBrush="#FF2F2F2F"
+                BorderThickness="1"
+                CornerRadius="0">
+            <fluentWpf:AcrylicPanel NoiseOpacity="0"
+                                    Target="{x:Static windows:MainWindow.AcrylicSource}"
+                                    TintColor="#33000000"
+                                    TintOpacity="1">
+                <Grid Margin="10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <StackPanel Margin="20" Orientation="Vertical">
+                        <Image HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Source="/Images/dal-icon-256.png"
+                               Stretch="Uniform" />
+                    </StackPanel>
+                    <StackPanel Grid.Row="0"
+                                Grid.Column="1"
+                                Margin="20"
+                                Orientation="Vertical">
+                        <TextBlock Margin="0,0,0,0"
+                                   HorizontalAlignment="Left"
+                                   FontFamily="{StaticResource Prototype}"
+                                   FontSize="28"
+                                   FontWeight="Bold"
+                                   Text="DCS Alternative Launcher" />
+                        <TextBlock Margin="0,10,0,0">
+                            <Run Text="Version:" />
+                            <Run Text="{Binding Version.Value}" />
+                        </TextBlock>
+                        <TextBlock Text="Created by Jabbers" />
+                        <StackPanel Margin="0,20,0,0" Orientation="Horizontal">
+
+                            <Button Height="40"
+                                    Padding="0"
+                                    Background="Transparent"
+                                    BorderThickness="0"
+                                    Command="{Binding OpenUrlCommand}"
+                                    CommandParameter="https://github.com/jeffboulanger/DCS-Alternative-Launcher"
+                                    Cursor="Hand">
+                                <Image RenderOptions.BitmapScalingMode="HighQuality"
+                                       Source="/Images/github-logo-header.png"
+                                       Stretch="Uniform" />
+                            </Button>
+                            <Button Height="40"
+                                    Margin="20,0,0,0"
+                                    Padding="0"
+                                    HorizontalAlignment="Left"
+                                    Background="Transparent"
+                                    BorderThickness="0"
+                                    Command="{Binding OpenUrlCommand}"
+                                    CommandParameter="https://discord.gg/fsd2Bxa"
+                                    Cursor="Hand">
+                                <Image RenderOptions.BitmapScalingMode="HighQuality"
+                                       Source="/Images/discord.png"
+                                       Stretch="Uniform" />
+                            </Button>
+                        </StackPanel>
+                        <TextBlock Margin="0,20,0,0"
+                                   FontSize="20"
+                                   Text="SUPPORT THE PROJECT" />
+                        <TextBlock Margin="0,10,0,0"
+                                   Text="Never required but always appreciated. Donations and Patreon subscriptions help motivate continued enhancements, feature request and support. If you choose. Please only subscribe or donate if you feel that I deserve it or have earned it, and are financially able to do so (make sure you're taken care of first!)."
+                                   TextWrapping="Wrap" />
+
+                        <StackPanel Margin="0,20,0,0" Orientation="Horizontal">
+                            <Button Height="50"
+                                    Padding="0"
+                                    Background="Transparent"
+                                    BorderThickness="0"
+                                    Command="{Binding OpenUrlCommand}"
+                                    CommandParameter="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick$amp;hosted_button_id=9RRKTB5QZBKDS$amp;source=url"
+                                    Cursor="Hand">
+                                <Image RenderOptions.BitmapScalingMode="HighQuality"
+                                       Source="/Images/paypal-dontation.png"
+                                       Stretch="Uniform" />
+                            </Button>
+                            <Button Height="50"
+                                    Margin="20,0,0,0"
+                                    Padding="0"
+                                    Background="Transparent"
+                                    BorderThickness="0"
+                                    Command="{Binding OpenUrlCommand}"
+                                    CommandParameter="https://www.patreon.com/bePatron?u=8451589"
+                                    Cursor="Hand">
+                                <Image RenderOptions.BitmapScalingMode="HighQuality"
+                                       Source="/Images/patreon-button.png"
+                                       Stretch="Uniform" />
+                            </Button>
+                        </StackPanel>
+                        <TextBlock Margin="0,20,0,0"
+                                   Text="Special thanks to all those involved in testing and providing feedback during the initial creation of the application...sorry if I forgot your name, there were a lot of you!"
+                                   TextWrapping="Wrap" />
+                        <TextBlock Margin="0,10,0,0"
+                                   Text="Thud, 777coletrain, Moltar, adam a, Bailey, kEnnY_m, MillerTime Nic, NightRage121, otavio, seapilot_,Tuuvas, YAGA, Vati, Mudflap, Seance12, Beeroshima, CaptZeen, coxy_99, Hawkeye, ,Madbrood, Matt Schuette, nabpp, Pasta, Polux, StandingCow, tab12393, Veritech, Willis Mcneil"
+                                   TextWrapping="Wrap" />
+                    </StackPanel>
+
+                </Grid>
+            </fluentWpf:AcrylicPanel>
+        </Border>
     </Grid>
 </UserControl>
