--- a/DCS.Alternative.Launcher/Plugins/Manuals/Views/ManualsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Manuals/Views/ManualsView.xaml
@@ -70,35 +70,6 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-            <Style x:Key="HyperlinkButton" TargetType="Button">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="Button">
-                            <ContentPresenter />
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-                <Setter Property="FontSize" Value="14" />
-                <Setter Property="Foreground" Value="#FFFFFFFF" />
-                <Setter Property="Cursor" Value="Hand" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="true">
-                        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="Button">
-                                    <ControlTemplate.Resources>
-                                        <Style TargetType="{x:Type TextBlock}">
-                                            <Setter Property="TextDecorations" Value="Underline" />
-                                        </Style>
-                                    </ControlTemplate.Resources>
-                                    <ContentPresenter />
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
             <data:UriToBitmapConverter x:Key="UriToBitmapConverter" />
         </Grid.Resources>
 
@@ -166,8 +137,13 @@
                                                                 VerticalAlignment="Center"
                                                                 Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource AncestorType={x:Type views1:ManualsView}}}"
                                                                 CommandParameter="{Binding}"
-                                                                Content="{Binding Name}"
-                                                                Style="{StaticResource HyperlinkButton}" />
+                                                                Style="{StaticResource HyperlinkButton}">
+                                                            <TextBlock>
+                                                                <Underline>
+                                                                    <Run Text="{Binding Name}" />
+                                                                </Underline>
+                                                            </TextBlock>
+                                                        </Button>
                                                     </Grid>
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
@@ -200,8 +176,13 @@
                                                                 VerticalAlignment="Center"
                                                                 Command="{Binding DataContext.OpenUrlCommand, RelativeSource={RelativeSource AncestorType={x:Type views1:ManualsView}}}"
                                                                 CommandParameter="{Binding Url}"
-                                                                Content="{Binding Name}"
-                                                                Style="{StaticResource HyperlinkButton}" />
+                                                                Style="{StaticResource HyperlinkButton}">
+                                                            <TextBlock>
+                                                                <Underline>
+                                                                    <Run Text="{Binding Name}" />
+                                                                </Underline>
+                                                            </TextBlock>
+                                                        </Button>
                                                     </Grid>
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
